--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ numpy>=1.11.1
 pytest>=2.9.2
 pytest-cov>=2.2.0
 scipy>=0.17.1
+scikit-learn>=0.18.1
 Sphinx>=1.4.1
 sphinx-rtd-theme>=0.1.9
 pillow>=3.3.1
